--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/vivekladprism/MyCampProject#readme",
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.0",
     "@mapbox/mapbox-sdk": "^0.11.0",
     "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
